--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
         crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>AWAX</title>
 </head>
@@ -17,7 +17,8 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+                    aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -29,7 +30,7 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav pull-right">
-                    <li class="active">
+                    <li>
                         <a href="#">HOME<span class="sr-only">(current)</span></a>
                     </li>
                     <li>
@@ -66,7 +67,57 @@
             <h1 class="welcome2">COMMUNICATION</h1>
             <p class="call">CALL US: +00 0 1234 5678</p>
             <button type="button" class="btn btn-warning btn-lg center-block btnjumb" href="#">GET IN TOUCH!</button>
+            <img class="pagi" src="../images/paginator.png">
+            <img class="callme" src="../images/callme.png">
+        </div>
+    </div>
+    <div class="container about" id="1">
+        <h1 class="title_about">ABOUT US</h1>
+        <p class="sub_title">WHO WE ARE?</p>
+        <div class="row">
+            <div class="col-md-7 text">
+                <p class="text_about">Praesent metus urna, feugiat a placerat vel, elementum at leo. Quisque vel
+                    fermentum ipsum. Nulla at facilisis est, vel condimentum ligula. Mauris volutpat vitae risus sed
+                    pellentesque. Praesent fermentum neque ac tellus gravida, at varius sem accumsan. Nam porta erat id
+                    sapien consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum in tempus fermentum, orci leo
+                    facilisis purus. Nam porta erat id sapien consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum
+                    in tempus fermentum, orci leo facilisis purus.</p>
+                    <button type="button" class="btn btn-warning btn-lg center-block btn_about" href="#">LEARN MORE</button>
+            </div>
+            <div class="col-md-5 video">
+                <img src="../images/video.png">
+            </div>
+        </div>
+    </div>
+    <div class="services" id="2">
+        <div class="container">
+            <h1 class="title_services">SERVICES</h1>
+            <p class="sub_title_services">SERVICES THAT WE PROVIDE</p>
+            <div class="col-md-3 serv">
+                <img src="../images/quality.png">
+                <h2 class="serv_title">HIGH QUALITY<br>DESIGN</h2>
+                <p class="serv_sub_title">Praesent metus urna, feugiat
+                    a placerat elementum</p>
+            </div>
+            <div class="col-md-3 serv">
+                <img class="st1" src="../images/star.png">
+                <h2 class="serv_title">MODERN DESIGN</h2>
+                <p class="serv_sub_title">Praesent metus urna, feugiat
+                   <br>a placerat elementum</p>
+            </div>
+            <div class="col-md-3 serv">
+                <img src="../images/clock.png">
+                <h2 class="serv_title">REGULAR<br>UPDATES</h2>
+                <p class="serv_sub_title">Praesent metus urna, feugiat</p>
+            </div>
+            <div class="col-md-3 serv serv1">
+                <img src="../images/support.png">
+                <h2 class="serv_title">FAST AND FREE<br>SUPPORT</h2>
+                <p class="serv_sub_title">Praesent metus urna, feugiat
+                    a placerat elementum</p>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
