--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <img src="images/Logo.png">
+                    <img src="images/Logo.png" alt="logo">
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -67,8 +67,8 @@
             <h1 class="welcome2">COMMUNICATION</h1>
             <p class="call">CALL US: +00 0 1234 5678</p>
             <button type="button" class="btn btn-warning btn-lg center-block btnjumb" href="#">GET IN TOUCH!</button>
-            <img class="pagi" src="../images/paginator.png">
-            <img class="callme" src="../images/callme.png">
+            <img class="pagi" src="../images/paginator.png" alt="paginator">
+            <img class="callme" src="../images/callme.png" alt="callme">
         </div>
     </div>
     <div class="container about" id="1">
@@ -82,10 +82,10 @@
                     sapien consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum in tempus fermentum, orci leo
                     facilisis purus. Nam porta erat id sapien consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum
                     in tempus fermentum, orci leo facilisis purus.</p>
-                    <button type="button" class="btn btn-warning btn-lg center-block btn_about" href="#">LEARN MORE</button>
+                <button type="button" class="btn btn-warning btn-lg center-block btn_about" href="#">LEARN MORE</button>
             </div>
             <div class="col-md-5 video">
-                <img src="../images/video.png">
+                <img src="../images/video.png" alt="video">
             </div>
         </div>
     </div>
@@ -94,27 +94,243 @@
             <h1 class="title_services">SERVICES</h1>
             <p class="sub_title_services">SERVICES THAT WE PROVIDE</p>
             <div class="col-md-3 serv">
-                <img src="../images/quality.png">
+                <img src="../images/quality.png" alt="quality">
                 <h2 class="serv_title">HIGH QUALITY<br>DESIGN</h2>
                 <p class="serv_sub_title">Praesent metus urna, feugiat
                     a placerat elementum</p>
             </div>
             <div class="col-md-3 serv">
-                <img class="st1" src="../images/star.png">
+                <img class="st1" src="../images/star.png" alt="star">
                 <h2 class="serv_title">MODERN DESIGN</h2>
                 <p class="serv_sub_title">Praesent metus urna, feugiat
-                   <br>a placerat elementum</p>
+                    <br>a placerat elementum</p>
             </div>
             <div class="col-md-3 serv">
-                <img src="../images/clock.png">
+                <img src="../images/clock.png" alt="clock">
                 <h2 class="serv_title">REGULAR<br>UPDATES</h2>
                 <p class="serv_sub_title">Praesent metus urna, feugiat</p>
             </div>
             <div class="col-md-3 serv serv1">
-                <img src="../images/support.png">
+                <img src="../images/support.png" alt="support">
                 <h2 class="serv_title">FAST AND FREE<br>SUPPORT</h2>
                 <p class="serv_sub_title">Praesent metus urna, feugiat
                     a placerat elementum</p>
+            </div>
+        </div>
+    </div>
+    <div class="projects">
+        <div class="container">
+            <h1 class="title_projects">OUR PROJECTS</h1>
+            <p class="sub_title_projects">WHAT WE CREATE</p>
+            <div class="gallery_nav">
+                <ul class="gallery_ul">
+                    <li class="li1">ALL</li>
+                    <li class="li2">PHOTOS</li>
+                    <li class="li3">BRANDING</li>
+                    <li class="li4">ADVERTS</li>
+                    <li class="li5">DEVELOPMENT</li>
+                    <li class="li6">MISC</li>
+                </ul>
+            </div>
+            <div class="gallery">
+                <div class="row">
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img1.png">
+                    </div>
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img2.png">
+                    </div>
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img3.png">
+                    </div>
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img4.png">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img5.png">
+                    </div>
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img6.png">
+                    </div>
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img7.png">
+                    </div>
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img8.png">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img9.png">
+                    </div>
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img10.png">
+                    </div>
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img11.png">
+                    </div>
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img12.png">
+                    </div>
+                </div>
+            </div>
+            <button type="button" class="btn btn-warning btn-lg center-block btn_gallery" href="#">MORE PROJECTS</button>
+        </div>
+    </div>
+    <div class="team">
+        <div class="container">
+            <h1 class="title_team">OUR TEAM</h1>
+            <p class="sub_title_team">OUR CO-WORKERS</p>
+            <div class="row memrow">
+                <div class="col-md-4 member">
+                    <img src="../images/member1.png">
+                    <h2 class="tea_title">JANE DOE</h2>
+                    <p class="tea_sub_title">Master mind</p>
+                    <div class="social">
+                        <div class="main_social">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-google-plus" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 member">
+                    <img src="../images/member2.png">
+                    <h2 class="tea_title">MIKE SHILLER</h2>
+                    <p class="tea_sub_title">Creative head</p>
+                    <div class="social">
+                        <div class="main_social">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-google-plus" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 member">
+                    <img src="../images/member3.png">
+                    <h2 class="tea_title">ANNA JOHNS</h2>
+                    <p class="tea_sub_title">Technical lead</p>
+                    <div class="social">
+                        <div class="main_social">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-google-plus" aria-hidden="true"></i>
+                        </div>
+                        <div class="main_social">
+                            <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="paginator">
+                <img class="pagi" src="../images/paginator.png" alt="paginator">
             </div>
         </div>
     </div>
