add new section

--- a/index.html
+++ b/index.html
@@ -71,21 +71,26 @@
             <img class="callme" src="../images/callme.png" alt="callme">
         </div>
     </div>
-    <div class="container about" id="1">
-        <h1 class="title_about">ABOUT US</h1>
-        <p class="sub_title">WHO WE ARE?</p>
-        <div class="row">
-            <div class="col-md-7 text">
-                <p class="text_about">Praesent metus urna, feugiat a placerat vel, elementum at leo. Quisque vel
-                    fermentum ipsum. Nulla at facilisis est, vel condimentum ligula. Mauris volutpat vitae risus sed
-                    pellentesque. Praesent fermentum neque ac tellus gravida, at varius sem accumsan. Nam porta erat id
-                    sapien consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum in tempus fermentum, orci leo
-                    facilisis purus. Nam porta erat id sapien consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum
-                    in tempus fermentum, orci leo facilisis purus.</p>
-                <button type="button" class="btn btn-warning btn-lg center-block btn_about" href="#">LEARN MORE</button>
-            </div>
-            <div class="col-md-5 video">
-                <img src="../images/video.png" alt="video">
+    <div class="about" id="1">
+        <div class="container">
+            <h1 class="title_about">ABOUT US</h1>
+            <p class="sub_title">WHO WE ARE?</p>
+            <div class="row">
+                <div class="col-md-7 text">
+                    <p class="text_about">Praesent metus urna, feugiat a placerat vel, elementum at leo. Quisque vel
+                        fermentum ipsum. Nulla at facilisis est, vel condimentum ligula. Mauris volutpat vitae risus
+                        sed
+                        pellentesque. Praesent fermentum neque ac tellus gravida, at varius sem accumsan. Nam porta
+                        erat id
+                        sapien consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum in tempus fermentum, orci leo
+                        facilisis purus. Nam porta erat id sapien consectetur. Fusce sed purus eros. Vivamus rhoncus,
+                        ipsum
+                        in tempus fermentum, orci leo facilisis purus.</p>
+                    <button type="button" class="btn btn-warning btn-lg center-block btn_about" href="#">LEARN MORE</button>
+                </div>
+                <div class="col-md-5 video">
+                    <img src="../images/video.png" alt="video">
+                </div>
             </div>
         </div>
     </div>
@@ -140,7 +145,7 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img1.png">
+                        <img src="../images/Img1.png" alt="gallery 1">
                     </div>
                     <div class="col-md-3 img_gallery">
                         <div class="overlay">
@@ -148,7 +153,7 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img2.png">
+                        <img src="../images/Img2.png" alt="gallery 2">
                     </div>
                     <div class="col-md-3 img_gallery">
                         <div class="overlay">
@@ -156,7 +161,7 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img3.png">
+                        <img src="../images/Img3.png" alt="gallery 3">
                     </div>
                     <div class="col-md-3 img_gallery">
                         <div class="overlay">
@@ -164,41 +169,7 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img4.png">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3 img_gallery">
-                        <div class="overlay">
-                            <h2>ABOUT</h2>
-                            <p>Praesent metus urna, feugiat<br>
-                                a placerat elementum at leo</p>
-                        </div>
-                        <img src="../images/Img5.png">
-                    </div>
-                    <div class="col-md-3 img_gallery">
-                        <div class="overlay">
-                            <h2>ABOUT</h2>
-                            <p>Praesent metus urna, feugiat<br>
-                                a placerat elementum at leo</p>
-                        </div>
-                        <img src="../images/Img6.png">
-                    </div>
-                    <div class="col-md-3 img_gallery">
-                        <div class="overlay">
-                            <h2>ABOUT</h2>
-                            <p>Praesent metus urna, feugiat<br>
-                                a placerat elementum at leo</p>
-                        </div>
-                        <img src="../images/Img7.png">
-                    </div>
-                    <div class="col-md-3 img_gallery">
-                        <div class="overlay">
-                            <h2>ABOUT</h2>
-                            <p>Praesent metus urna, feugiat<br>
-                                a placerat elementum at leo</p>
-                        </div>
-                        <img src="../images/Img8.png">
+                        <img src="../images/Img4.png" alt="gallery 4">
                     </div>
                 </div>
                 <div class="row">
@@ -208,7 +179,7 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img9.png">
+                        <img src="../images/Img5.png" alt="gallery 5">
                     </div>
                     <div class="col-md-3 img_gallery">
                         <div class="overlay">
@@ -216,7 +187,7 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img10.png">
+                        <img src="../images/Img6.png" alt="gallery 6">
                     </div>
                     <div class="col-md-3 img_gallery">
                         <div class="overlay">
@@ -224,7 +195,7 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img11.png">
+                        <img src="../images/Img7.png" alt="gallery 7">
                     </div>
                     <div class="col-md-3 img_gallery">
                         <div class="overlay">
@@ -232,7 +203,41 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img12.png">
+                        <img src="../images/Img8.png" alt="gallery 8">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img9.png" alt="gallery 9">
+                    </div>
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img10.png" alt="gallery 10">
+                    </div>
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img11.png" alt="gallery 11">
+                    </div>
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="../images/Img12.png" alt="gallery 12">
                     </div>
                 </div>
             </div>
@@ -331,6 +336,98 @@
             </div>
             <div class="paginator">
                 <img class="pagi" src="../images/paginator.png" alt="paginator">
+            </div>
+        </div>
+    </div>
+    <div class="clients">
+        <div class="container">
+            <h1 class="title_clients">HAPPY CLIENTS</h1>
+            <p class="sub_title_clients">CLIENT REVIEWS</p>
+            <div class="client_img">
+                <img src="../images/client.png" alt="client">
+            </div>
+            <h2 class="cli_title">John Doe</h2>
+            <p class="cli_sub_title">Head of PR Departament</p>
+            <div class="quotes">
+                <img src="../images/quotes.png">
+            </div>
+            <div class="client_p">
+                <p>Praesent metus urna, feugiat a placerat vel, elementum at leo. Quisque vel fermentum ipsum. Nulla at
+                    facilisis est, vel condimentum ligula. consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum in
+                    tempus fermentum, orci leo facilisis purus</p>
+            </div>
+            <div class="paginator">
+                <img class="pagi" src="../images/paginator.png" alt="paginator">
+            </div>
+        </div>
+    </div>
+    <div class="logos">
+        <img src="../images/logo1.png">
+        <img src="../images/logo2.png">
+        <img src="../images/logo3.png">
+        <img src="../images/logo4.png">
+        <img src="../images/logo5.png">
+        <img src="../images/logo6.png">
+    </div>
+    <div class="price">
+        <div class="container">
+            <h1 class="title_price">PRICE</h1>
+            <p class="sub_title_price">PRICING TABLE</p>
+            <div class="row pro_row">
+                <div class="col-md-3 product">
+                    <h3 class="pro_name">EXPRESS</h3>
+                    <h2 class="pro_price">$ 9.99</h2>
+                    <p class="month">/MONTH</p>
+                    <p class="features">Tracking issues<br>-<br>Add bugs through email<br>-<br>Notifications<br>-<br>Time
+                        tracking<br>-<br>Custom views</p>
+                    <button type="button" class="btn btn-warning btn-lg center-block btn_pro" href="#">CHOOSE</button>
+                </div>
+                <div class="col-md-3 product">
+                    <h3 class="pro_name">STANDART</h3>
+                    <h2 class="pro_price">$ 14.99</h2>
+                    <p class="month">/MONTH</p>
+                    <p class="features">Tracking issues<br>-<br>Add bugs through email<br>-<br>Notifications<br>-<br>Time
+                        tracking<br>-<br>Custom views</p>
+                    <button type="button" class="btn btn-warning btn-lg center-block btn_pro" href="#">CHOOSE</button>
+                </div>
+                <div class="col-md-3 product">
+                    <h3 class="pro_name">LUXE</h3>
+                    <h2 class="pro_price">$ 19.99</h2>
+                    <p class="month">/MONTH</p>
+                    <p class="features">Tracking issues<br>-<br>Add bugs through email<br>-<br>Notifications<br>-<br>Time
+                        tracking<br>-<br>Custom views</p>
+                    <button type="button" class="btn btn-warning btn-lg center-block btn_pro" href="#">CHOOSE</button>
+                </div>
+                <div class="col-md-3 product">
+                    <h3 class="pro_name">PREMIUM</h3>
+                    <h2 class="pro_price">$ 24.99</h2>
+                    <p class="month">/MONTH</p>
+                    <p class="features">Tracking issues<br>-<br>Add bugs through email<br>-<br>Notifications<br>-<br>Time
+                        tracking<br>-<br>Custom views</p>
+                    <button type="button" class="btn btn-warning btn-lg center-block btn_pro" href="#">CHOOSE</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="premium">
+        <div class="container">
+            <h1 class="title_premium">PREMIUM</h1>
+            <p class="sub_title_premium">EVEN MORE FEATURES AVAILABLE</p>
+            <div class="row prem_row">
+                <div class="col-md-6 box">
+                    <img src="../images/premium.png">
+                </div>
+                <div class="col-md-6 text">
+                    <img src="../images/icon-premium.png">
+                    <h1 class="prem_title">FIRST FEATURE</h1>
+                    <p class="prem_sub_title">Praesent metus urna, feugiat a placerat vel, elementum at leo.<br>
+                        Quisque vel fermentum ipsum. Nulla at facilisis est.<br>
+                        — FEATURE ONE
+                        <br>
+                        — FEATURE TWO
+                        <br>
+                        — FEATURE THREE</p>
+                </div>
             </div>
         </div>
     </div>
