Add "premium", "some facts" and social icon section

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <h1 class="welcome2">COMMUNICATION</h1>
             <p class="call">CALL US: +00 0 1234 5678</p>
             <button type="button" class="btn btn-warning btn-lg center-block btnjumb" href="#">GET IN TOUCH!</button>
-            <img class="pagi" src="../images/paginator.png" alt="paginator">
-            <img class="callme" src="../images/callme.png" alt="callme">
+            <img class="pagi" src="images/paginator.png" alt="paginator">
+            <img class="callme" src="images/callme.png" alt="callme">
         </div>
     </div>
     <div class="about" id="1">
@@ -89,7 +89,7 @@
                     <button type="button" class="btn btn-warning btn-lg center-block btn_about" href="#">LEARN MORE</button>
                 </div>
                 <div class="col-md-5 video">
-                    <img src="../images/video.png" alt="video">
+                    <img src="images/video.png" alt="video">
                 </div>
             </div>
         </div>
@@ -99,24 +99,24 @@
             <h1 class="title_services">SERVICES</h1>
             <p class="sub_title_services">SERVICES THAT WE PROVIDE</p>
             <div class="col-md-3 serv">
-                <img src="../images/quality.png" alt="quality">
+                <img src="images/quality.png" alt="quality">
                 <h2 class="serv_title">HIGH QUALITY<br>DESIGN</h2>
                 <p class="serv_sub_title">Praesent metus urna, feugiat
                     a placerat elementum</p>
             </div>
             <div class="col-md-3 serv">
-                <img class="st1" src="../images/star.png" alt="star">
+                <img class="st1" src="images/star.png" alt="star">
                 <h2 class="serv_title">MODERN DESIGN</h2>
                 <p class="serv_sub_title">Praesent metus urna, feugiat
                     <br>a placerat elementum</p>
             </div>
             <div class="col-md-3 serv">
-                <img src="../images/clock.png" alt="clock">
+                <img src="images/clock.png" alt="clock">
                 <h2 class="serv_title">REGULAR<br>UPDATES</h2>
                 <p class="serv_sub_title">Praesent metus urna, feugiat</p>
             </div>
             <div class="col-md-3 serv serv1">
-                <img src="../images/support.png" alt="support">
+                <img src="images/support.png" alt="support">
                 <h2 class="serv_title">FAST AND FREE<br>SUPPORT</h2>
                 <p class="serv_sub_title">Praesent metus urna, feugiat
                     a placerat elementum</p>
@@ -145,7 +145,7 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img1.png" alt="gallery 1">
+                        <img src="images/Img1.png" alt="gallery 1">
                     </div>
                     <div class="col-md-3 img_gallery">
                         <div class="overlay">
@@ -153,7 +153,7 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img2.png" alt="gallery 2">
+                        <img src="images/Img2.png" alt="gallery 2">
                     </div>
                     <div class="col-md-3 img_gallery">
                         <div class="overlay">
@@ -161,7 +161,7 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img3.png" alt="gallery 3">
+                        <img src="images/Img3.png" alt="gallery 3">
                     </div>
                     <div class="col-md-3 img_gallery">
                         <div class="overlay">
@@ -169,41 +169,7 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img4.png" alt="gallery 4">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3 img_gallery">
-                        <div class="overlay">
-                            <h2>ABOUT</h2>
-                            <p>Praesent metus urna, feugiat<br>
-                                a placerat elementum at leo</p>
-                        </div>
-                        <img src="../images/Img5.png" alt="gallery 5">
-                    </div>
-                    <div class="col-md-3 img_gallery">
-                        <div class="overlay">
-                            <h2>ABOUT</h2>
-                            <p>Praesent metus urna, feugiat<br>
-                                a placerat elementum at leo</p>
-                        </div>
-                        <img src="../images/Img6.png" alt="gallery 6">
-                    </div>
-                    <div class="col-md-3 img_gallery">
-                        <div class="overlay">
-                            <h2>ABOUT</h2>
-                            <p>Praesent metus urna, feugiat<br>
-                                a placerat elementum at leo</p>
-                        </div>
-                        <img src="../images/Img7.png" alt="gallery 7">
-                    </div>
-                    <div class="col-md-3 img_gallery">
-                        <div class="overlay">
-                            <h2>ABOUT</h2>
-                            <p>Praesent metus urna, feugiat<br>
-                                a placerat elementum at leo</p>
-                        </div>
-                        <img src="../images/Img8.png" alt="gallery 8">
+                        <img src="images/Img4.png" alt="gallery 4">
                     </div>
                 </div>
                 <div class="row">
@@ -213,7 +179,7 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img9.png" alt="gallery 9">
+                        <img src="images/Img5.png" alt="gallery 5">
                     </div>
                     <div class="col-md-3 img_gallery">
                         <div class="overlay">
@@ -221,7 +187,7 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img10.png" alt="gallery 10">
+                        <img src="images/Img6.png" alt="gallery 6">
                     </div>
                     <div class="col-md-3 img_gallery">
                         <div class="overlay">
@@ -229,7 +195,7 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img11.png" alt="gallery 11">
+                        <img src="images/Img7.png" alt="gallery 7">
                     </div>
                     <div class="col-md-3 img_gallery">
                         <div class="overlay">
@@ -237,7 +203,41 @@
                             <p>Praesent metus urna, feugiat<br>
                                 a placerat elementum at leo</p>
                         </div>
-                        <img src="../images/Img12.png" alt="gallery 12">
+                        <img src="images/Img8.png" alt="gallery 8">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="images/Img9.png" alt="gallery 9">
+                    </div>
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="images/Img10.png" alt="gallery 10">
+                    </div>
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="images/Img11.png" alt="gallery 11">
+                    </div>
+                    <div class="col-md-3 img_gallery">
+                        <div class="overlay">
+                            <h2>ABOUT</h2>
+                            <p>Praesent metus urna, feugiat<br>
+                                a placerat elementum at leo</p>
+                        </div>
+                        <img src="images/Img12.png" alt="gallery 12">
                     </div>
                 </div>
             </div>
@@ -250,7 +250,7 @@
             <p class="sub_title_team">OUR CO-WORKERS</p>
             <div class="row memrow">
                 <div class="col-md-4 member">
-                    <img src="../images/member1.png">
+                    <img src="images/member1.png">
                     <h2 class="tea_title">JANE DOE</h2>
                     <p class="tea_sub_title">Master mind</p>
                     <div class="social">
@@ -278,7 +278,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 member">
-                    <img src="../images/member2.png">
+                    <img src="images/member2.png">
                     <h2 class="tea_title">MIKE SHILLER</h2>
                     <p class="tea_sub_title">Creative head</p>
                     <div class="social">
@@ -306,7 +306,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 member">
-                    <img src="../images/member3.png">
+                    <img src="images/member3.png">
                     <h2 class="tea_title">ANNA JOHNS</h2>
                     <p class="tea_sub_title">Technical lead</p>
                     <div class="social">
@@ -335,7 +335,7 @@
                 </div>
             </div>
             <div class="paginator">
-                <img class="pagi" src="../images/paginator.png" alt="paginator">
+                <img class="pagi" src="images/paginator.png" alt="paginator">
             </div>
         </div>
     </div>
@@ -344,12 +344,12 @@
             <h1 class="title_clients">HAPPY CLIENTS</h1>
             <p class="sub_title_clients">CLIENT REVIEWS</p>
             <div class="client_img">
-                <img src="../images/client.png" alt="client">
+                <img src="images/client.png" alt="client">
             </div>
             <h2 class="cli_title">John Doe</h2>
             <p class="cli_sub_title">Head of PR Departament</p>
             <div class="quotes">
-                <img src="../images/quotes.png">
+                <img src="images/quotes.png">
             </div>
             <div class="client_p">
                 <p>Praesent metus urna, feugiat a placerat vel, elementum at leo. Quisque vel fermentum ipsum. Nulla at
@@ -357,17 +357,17 @@
                     tempus fermentum, orci leo facilisis purus</p>
             </div>
             <div class="paginator">
-                <img class="pagi" src="../images/paginator.png" alt="paginator">
+                <img class="pagi" src="images/paginator.png" alt="paginator">
             </div>
         </div>
     </div>
     <div class="logos">
-        <img src="../images/logo1.png">
-        <img src="../images/logo2.png">
-        <img src="../images/logo3.png">
-        <img src="../images/logo4.png">
-        <img src="../images/logo5.png">
-        <img src="../images/logo6.png">
+        <img src="images/logo1.png">
+        <img src="images/logo2.png">
+        <img src="images/logo3.png">
+        <img src="images/logo4.png">
+        <img src="images/logo5.png">
+        <img src="images/logo6.png">
     </div>
     <div class="price">
         <div class="container">
@@ -415,20 +415,80 @@
             <p class="sub_title_premium">EVEN MORE FEATURES AVAILABLE</p>
             <div class="row prem_row">
                 <div class="col-md-6 box">
-                    <img src="../images/premium.png">
+                    <img src="images/premium.png">
                 </div>
                 <div class="col-md-6 text">
-                    <img src="../images/icon-premium.png">
                     <h1 class="prem_title">FIRST FEATURE</h1>
                     <p class="prem_sub_title">Praesent metus urna, feugiat a placerat vel, elementum at leo.<br>
-                        Quisque vel fermentum ipsum. Nulla at facilisis est.<br>
-                        — FEATURE ONE
-                        <br>
-                        — FEATURE TWO
-                        <br>
-                        — FEATURE THREE</p>
+                        Quisque vel fermentum ipsum. Nulla at facilisis est.<br></p>
+                    <ul class="feature">
+                        <li>— FEATURE ONE</li>
+                        <li>— FEATURE TWO</li>
+                        <li>— FEATURE THREE</li>
+                    </ul>
+                    <h1 class="prem_title2">SECOND FEATURE</h1>
+                    <p class="prem_sub_title">Praesent metus urna, feugiat a placerat vel</p>
+                    <h1 class="prem_title3">THIRD FEATURE</h1>
+                    <p class="prem_sub_title">Praesent metus urna, feugiat a placerat vel, elementum at leo.</p>
                 </div>
             </div>
+            <div class="paginator2">
+                <img class="pagi" src="images/paginator.png" alt="paginator">
+            </div>
+            <button type="button" class="btn btn-warning btn-lg center-block btn_prem" href="#">CHOOSE</button>
+        </div>
+    </div>
+    <div class="facts">
+        <div class="container">
+            <h1 class="title_facts">SOME FACTS</h1>
+            <p class="sub_title_facts">ABOUT OUR WORK</p>
+            <div class="col-md-3 fac">
+                <h1 class="fac_main_title">1000</h1>
+                <h2 class="fac_title">DESIGN PROJECTS<br>RELEASED</h2>
+                <p class="fac_sub_title">Praesent metus urna, feugiat
+                    a placerat elementum at leo</p>
+            </div>
+            <div class="col-md-3 fac">
+                <h1 class="fac_main_title">900</h1>
+                <h2 class="fac_title">PHOTOS</h2>
+                <p class="fac_sub_title2">Praesent metus urna, feugiat
+                    <br>a placerat elementum at leo</p>
+            </div>
+            <div class="col-md-3 fac">
+                <h1 class="fac_main_title">500</h1>
+                <h2 class="fac_title">MARKETING<br>IDEAS</h2>
+                <p class="fac_sub_title">Praesent metus urna, feugiat
+                    <br>a placerat elementum at leo</p>
+            </div>
+            <div class="col-md-3 fac">
+                <h1 class="fac_main_title">100</h1>
+                <h2 class="fac_title">EXHIBITIONS</h2>
+                <p class="fac_sub_title2">Praesent metus urna, feugiat
+                    a placerat elementum at leo</p>
+            </div>
+        </div>
+    </div>
+    <div class="social_icon">
+        <img src="images/share.png">
+        <div class="main_social">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+            <p class="after_i">152</p>
+        </div>
+        <div class="main_social2">
+            <i class="fa fa-linkedin" aria-hidden="true"></i>
+            <p class="after_i">31</p>
+        </div>
+        <div class="main_social3">
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+            <p class="after_i">165</p>
+        </div>
+        <div class="main_social4">
+            <i class="fa fa-google-plus" aria-hidden="true"></i>
+            <p class="after_i">22</p>
+        </div>
+        <div class="main_social5">
+            <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+            <p class="after_i">165</p>
         </div>
     </div>
 </body>
