add contact, map and footer section

--- a/index.html
+++ b/index.html
@@ -491,6 +491,58 @@
             <p class="after_i">165</p>
         </div>
     </div>
+    <div class="contact">
+        <div class="container">
+            <h1 class="title_contact">CONTACT US</h1>
+            <p class="sub_title_contact">OUR AGENCY LOCATED IN MELBOURNE, AUSTRALIA</p>
+            <div class="name">
+                <div class="form-group">
+                    <input class="form" id="name" type="text" placeholder="NAME" required="required"
+                        data-validation-required-message="Please enter your name." aria-invalid="false">
+                </div>
+                <div class="form-group">
+                    <input class="form" id="email" type="email" placeholder="EMAIL" required="required"
+                        data-validation-required-message="Please enter your email address.">
+                </div>
+            </div>
+            <div class="form-group">
+                <input class="form" id="subject" type="sub" placeholder="SUBJECT" required="required"
+                    data-validation-required-message="Please enter subject.">
+            </div>
+            <div class="form-group">
+                <input class="form" id="message" type="mess" placeholder="MESSAGE" required="required"
+                    data-validation-required-message="Please enter your message.">
+            </div>
+        </div>
+        <button type="button" class="btn btn-warning btn-lg center-block btn_contact" href="#">SEND MESSAGE</button>
+        <img src="images/map.png" alt="map" class="map">
+        <img class="scrollup" src="images/scrollup.png" alt="scroll up">
+    </div>
+    <div class="footer">
+        <div class="social2">
+            <div class="main_social2">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+            </div>
+            <div class="main_social2">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+            </div>
+            <div class="main_social2">
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </div>
+            <div class="main_social2">
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+            </div>
+            <div class="main_social2">
+                <i class="fa fa-youtube-play" aria-hidden="true"></i>
+            </div>
+            <div class="main_social2">
+                <i class="fa fa-google-plus" aria-hidden="true"></i>
+            </div>
+            <div class="main_social2">
+                <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
