--- a/index.html
+++ b/index.html
@@ -516,30 +516,46 @@
         </div>
         <button type="button" class="btn btn-warning btn-lg center-block btn_contact" href="#">SEND MESSAGE</button>
         <img src="images/map.png" alt="map" class="map">
-        <img class="scrollup" src="images/scrollup.png" alt="scroll up">
     </div>
     <div class="footer">
-        <div class="social2">
-            <div class="main_social2">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
+        <div class="container">
+            <div class="col-md-4">
+                <div class="social2">
+                    <div class="main_social2">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </div>
+                    <div class="main_social2">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </div>
+                    <div class="main_social2">
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    </div>
+                    <div class="main_social2">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </div>
+                    <div class="main_social2">
+                        <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                    </div>
+                    <div class="main_social2">
+                        <i class="fa fa-google-plus" aria-hidden="true"></i>
+                    </div>
+                    <div class="main_social2">
+                        <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+                    </div>
+                </div>
+                <h3 class="copyright">Dawid Barsznica © 2019</h3>
             </div>
-            <div class="main_social2">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
+            <div class="col-md-4">
+                <p class="footer_text">Nulla iaculis enim a magna tempor congue. Sed aliquam dignissim hendrerit. Duis erat nulla, pellentesque at enim in, scelerisque placerat nunc. Nulla vestibulum ex sed neque auctor rutrum. Donec fringilla tincidunt aliquet. Nullam rhoncus urna massa, vulputate congue velit pulvinar suscipit. Mauris laoreet blandit pharetra. Suspendisse rutrum dolor at augue convallis, eget dapibus nunc consequat. Sed diam nulla, elementum non laoreet eu,vulputate urna, at pellentesque risus orci in ante.</p>
             </div>
-            <div class="main_social2">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </div>
-            <div class="main_social2">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-            </div>
-            <div class="main_social2">
-                <i class="fa fa-youtube-play" aria-hidden="true"></i>
-            </div>
-            <div class="main_social2">
-                <i class="fa fa-google-plus" aria-hidden="true"></i>
-            </div>
-            <div class="main_social2">
-                <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+            <div class="col-md-4">
+                <div class="sub">
+                    <div class="form-group">
+                        <input class="form" id="emailsub" type="text" placeholder="EMAIL TO SUBSCRIBE" required="required"
+                            data-validation-required-message="Please enter your email." aria-invalid="false">
+                    </div>
+                    <button type="button" class="btn btn-warning btn-lg center-block btn_footer" href="#">SUBSCRIBE</button>
+                </div>
             </div>
         </div>
     </div>
